Added Unit test Cases and Bug fixes

--- a/resiliency-studio-ui/src/main/webapp/app/modules/dashboard/dashboard.html
+++ b/resiliency-studio-ui/src/main/webapp/app/modules/dashboard/dashboard.html
@@ -46,7 +46,7 @@ body {
 					<div class="panel panel-default">
 						<div class="panel-heading">
 							<h3 class="panel-title">
-								<strong>Applications</strong>
+								Applications
 							</h3>
 						</div>
 						<div class="panel-body">
@@ -75,11 +75,11 @@ body {
 						</div>
 					</div>
 				</div>
-				<div class="col-md-5 col-lg-5">
+				<div class="col-md-5 col-lg-5 col-5-custom">
 					<div class="panel panel-default">
 						<div class="panel-heading">
 							<h3 class="panel-title">
-								<strong>Scenarios </strong>
+								Scenarios
 							</h3>
 						</div>
 						<div class="panel-body">
@@ -153,7 +153,7 @@ body {
 					<div class="panel panel-default">
 						<div class="panel-heading">
 							<h3 class="panel-title">
-								<strong>Monkey Strategies </strong>
+								Monkey Strategies
 							</h3>
 						</div>
 						<div class="panel-body">
