--- a/resiliency-studio-ui/src/main/webapp/app/modules/scenariosExecution/executionDashboard/executionDashboard.html
+++ b/resiliency-studio-ui/src/main/webapp/app/modules/scenariosExecution/executionDashboard/executionDashboard.html
@@ -64,9 +64,9 @@
 						</div>
 					</div>
 					<br>
-					<br>
+					
 					<button id="submitButton" class="btn btn-primary next-step"
-						type="button" ng-click="getKibana()" style="margin-left: 20px">Submit</button>
+						type="button" ng-click="getKibana()" style="margin-left: 20px;margin-top: 5px;">Submit</button>
 					<div style="padding-top: 20px;">
 						<div class="container table-responsive">
 
