--- a/resiliency-studio-ui/src/main/webapp/index.html
+++ b/resiliency-studio-ui/src/main/webapp/index.html
@@ -152,6 +152,7 @@
 	<script src="app/components/lib/js/scripts/angular-datatables.min.js"></script>
 	<script src="app/components/lib/js/scripts/angular-route.js"></script>
 	<script src="app/components/lib/js/scripts/angular-cookies.js"></script>
+		<script src="app/components/lib/js/fileUpload.js"></script>
 	<script src="app/components/angular-sanitize.js"></script>
 	<script src="app/components/dropdown/angularjs-dropdown-multiselect.js"></script>
 	<script src="app/components/dropdown/lodash.min.js"></script>
