--- a/resiliency-studio-ui/src/main/webapp/app/modules/monkeys/editMonkeys/editMonkeyStrategy.html
+++ b/resiliency-studio-ui/src/main/webapp/app/modules/monkeys/editMonkeys/editMonkeyStrategy.html
@@ -93,7 +93,7 @@
 							<div class="form-group">
 								<label for="category">Script Type*:</label> <select
 									class="form-control" ng-model="fields.scriptTypeCategory"
-									name="category" id="category" required>
+									name="category" id="category" required  ng-change="uploadScript();">
 									<option value="">Select Script</option>
 									<option ng-repeat="script in failures.scriptCategory">{{script}}</option>
 								</select>
@@ -133,10 +133,14 @@
 											id="file" ng-model="fields.monkeyStrategyScript"
 											on-read-file="displayFileContents(contents)"
 											onchange="angular.element(this).scope().uploadFile(this.files)"
-											accept=".sh,.yml">
+											accept=".sh,.yml" title="">
+											
+											<button class="button browse" type="button">
+												<span>Browse</span>
+											</button> 
 
 									</div>
-									<strong class="alert alert-danger" ng-show="invalidfile">Invalid
+									<strong class="alert alert-danger" id="alert-msg" ng-show="invalidfile">Invalid
 										File Format</strong>
 									<p ng-show="scriptValidation" style="color: #a94442;">Please
 										Upload/Code Script.</p>
@@ -243,7 +247,7 @@
 						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 pull-right">
 							<div class="btn-group pull-right">
 								<button class="btn btn-primary pull-right"
-									id="addMonkeyStrategy" ng-disabled="!fields.monkeyStrategyName"
+									id="addMonkeyStrategy" ng-disabled="!fields.monkeyStrategyName || invalidfile==true"
 									type="submit">Update</button>
 								<button class="btn btn-link pull-right" id="resetMonkeyStrategy"
 									ng-click="resetUpdateMonkeyForm()" type="reset">
